--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,6 +14,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          # BRI OMC (A52SXQ_CHN_TW)
+          - model: "SM-A528B"
+            region: "BRI"
           # ODM OMC
           - model: "SM-A528B"
             region: "INS"
