github-actions: fetch firmwares with OLE and OWM CSC's
Signed-off-by: BlackMesa123 <giangrecosalvo9@gmail.com>

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -26,12 +26,18 @@ jobs:
           # OKR OMC
           - model: "SM-A528N"
             region: "KOO"
+          # OLE OMC
+          - model: "SM-A528B"
+            region: "XID"
           # OLM OMC
           - model: "SM-A528B"
             region: "XSA"
           # OWA OMC
           - model: "SM-A528B"
             region: "CDR"
+          # OWM OMC
+          - model: "SM-A528B"
+            region: "TGP"
           # OWO OMC
           - model: "SM-A528B"
             region: "PEO"
