--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -168,7 +168,7 @@ jobs:
 
       - name: Upload release assets
         if: env.need_update == 1
-        uses: CaptainThrowback/action-gh-release@master
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
