--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -72,13 +72,18 @@ jobs:
         with:
           node-version: 'latest'
 
+      - name: Set up Python 3
+        if: env.need_update == 1
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
       - name: Install dependencies
         if: env.need_update == 1
         run: |
           sudo apt-get update
           sudo apt-get install -y liblz4-tool zip simg2img f2fs-tools
           sudo npm i -g samfirm
-          sudo wget -O /usr/bin/lpunpack https://corsica.nu/lpunpack && sudo chmod +x /usr/bin/lpunpack
 
       - name: Fetch firmware
         if: env.need_update == 1
@@ -148,7 +153,7 @@ jobs:
           simg2img super.img super_raw.img
           rm super.img
           mv super_raw.img super.img
-          lpunpack --partition=vendor super.img
+          python3 tools/bin/lpunpack.py -p vendor super.img .
           rm super.img
           [[ -e vendor.img.ext4 ]] && mv vendor.img.ext4 vendor.img
           [[ -e vendor.img ]] && zip ${{ env.latest_shortversion }}_vendor.zip vendor.img
