github-actions: add dummy imei number
More info at:
https://github.com/ivanmeler/SamFirm_Reborn/issues/15#issuecomment-1865275436
https://github.com/zacharee/SamloaderKotlin/issues/116#issuecomment-1869732033

Signed-off-by: BlackMesa123 <giangrecosalvo9@gmail.com>

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -87,7 +87,13 @@ jobs:
 
       - name: Fetch firmware
         if: env.need_update == 1
-        run: samfirm -m ${{ matrix.model }} -r ${{ matrix.region }}
+        run: |
+          if [[ "${{ matrix.model }}" == "SM-A528N" ]]; then
+              imei="354049881234560"
+          else
+              imei="352599501234566"
+          fi
+          samfirm -m ${{ matrix.model }} -r ${{ matrix.region }} -i $imei
 
       - name: Get path of files
         if: env.need_update == 1
